# Operating-System-Tasks

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  OperatingSystemTasks  cmake_install.cmake  header.h  main.c  task1.h  task2.h  task3client.h  task3server.h
.github/workflows/: c-cpp.yml
Operating System Tasks/: myheader.h  task1(1).c  task1.c  task2(1).c  task2.c  task3client.c  task3server.c
